<resources>
    <string name="app_name">Verifi</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Main</string>
    <string name="second_fragment_label">Configure</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="status_stop_button">Stop Test</string>
    <string name="tab">\u0009\u0009\u0009\u0009</string>
    <string name="status_label">TIME EVENT</string>
    <string name="start_test">START</string>
    <string name="stop_test">STOP</string>
    <string name="izat_sdk">IZat SDK</string>
    <string name="location_mgr">Location Mgr</string>
    <string name="off">OFF</string>
    <string name="gps_text">Select GPS type</string>
    <string name="interval_sec">Interval (sec)</string>
    <string name="gps_interval_default">180</string>
    <string name="sensor_text">Select Sensor type</string>
    <string name="offbody">Off Body</string>
    <string name="offbody_enhanced">Off Body Enhanced</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="offbody_heart_rate">Off Body And Heart Rate</string>
    <string name="ecg">ECG</string>
    <string name="sleep_mon">Sleep Monitor</string>
    <string name="sensor_interval_default">60</string>
    <string name="data_connection_text">Select Connection type</string>
    <string name="wifi">WiFi</string>
    <string name="cellular">Cellular</string>
    <string name="data_connection_interval_default">900</string>
    <string name="configure_test">CONFIGURE</string>
    <string name="D450C1B">Mason D450C1B</string>
    <string name="A4100A1">Mason A4100A1</string>

</resources>